...
                AddDataView(presentingAccount: $presentingAccount)
            }
            .customizationID("home.addData")
            .accessibilityIdentifier("Add Data")
            
            // Record tab
            Tab("Records", systemImage: "list.clipboard", value: .records) {
                RecordsView(presentingAccount: $presentingAccount)
            }
            .customizationID("home.records")
            .accessibilityIdentifier("Records")
            
            // Schedule tab
...
