...
        }
      }
    },
    "Acknowledge" : {

    },
    "Add" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add"
          }
        }
      }
    },
    "Add Data" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Data"
          }
...
            "state" : "translated",
            "value" : "Close"
          }
        }
      }
    },
    "Connect" : {

    },
    "Connected Devices" : {

    },
    "Connection Error" : {
...
    "Delete Lab Record" : {

    },
    "Delete Medication" : {

    },
    "Diastolic (mmHg)" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Diastolic (mmHg)"
          }
...
        }
      }
    },
    "Edit" : {

    },
    "Enter Data Manually" : {

    },
    "Enter Lab Results" : {

    },
    "Error" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Error"
          }
...
        }
      }
    },
    "Please select all that apply:" : {

    },
    "Please turn on your Bluetooth and CORE sensor." : {

    },
    "Provide Your Data" : {

    },
    "Rate (bpm)" : {
...
            "state" : "translated",
            "value" : "Swift Package Manager"
          }
        }
      }
    },
    "Systolic (mmHg)" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Systolic (mmHg)"
          }
...
            "state" : "translated",
            "value" : "This application is built to track symptoms of chemotherapy patients and early detection of febrile neutropenia."
          }
        }
      }
    },
    "What data would you like to add?" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "What data would you like to add?"
          }
...
