...
    @Binding var presentingAccount: Bool
    
    let dataTypes: [(name: String, emoji: String)] = [
        (name: "Temperature", emoji: "🌡️"),
        (name: "Heart Rate", emoji: "🫀"),
        (name: "Oxygen Saturation", emoji: "🫁"),
        (name: "Blood Pressure", emoji: "🩸"),
        (name: "Lab Results", emoji: "🧪"),
        (name: "Medication", emoji: "💊"),
        (name: "Symptoms", emoji: "😷"),
        (name: "MASCC Index", emoji: "📊")
    ]
    
...
